Fix mobile layout overflows

--- a/pages/encounterCalc/style.css
+++ b/pages/encounterCalc/style.css
@@ -7,36 +7,7 @@
     padding: 16px;
 }
 
-@media only screen and (max-width: 1080px) {
-    .gridParent {
-        display: grid;
-        grid-template-columns: auto;
-        grid-template-rows: auto;
-
-
-    }
-
-    .gridCell:nth-child(1) {
-        order: 2;
-    }
-    
-    .gridCell:nth-child(2) {
-        order: 1;
-    }
-
-    .rightCell {
-        padding-bottom: 20px;
-    }
-}
-
-
 /* --- Encounter Slots --- */
-
-.encounterSlot > img {
-    position: relative;
-    bottom: 12px;
-    min-height: 56px;
-}
 
 .encounterSlot {
     padding: 0 12px;
@@ -52,14 +23,77 @@
     min-height: 56px;
 }
 
-.encounterSlot p {
-    margin: auto 0;
+.encounterSlot > img {
+    position: relative;
+    bottom: 12px;
+    min-height: 56px;
 }
 
 .encounterSlot #species {
     padding-left: 12px;
     overflow-wrap: normal;
 }
+
+.encounterSlot p {
+    margin: auto 0;
+}
+
+@media only screen and (max-width: 1080px) {
+    .gridParent {
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: auto;
+    }
+
+    .gridCell:nth-child(1) {
+        order: 2;
+    }
+    
+    .gridCell:nth-child(2) {
+        order: 1;
+    }
+
+    .rightCell {
+        padding-bottom: 20px;
+    }
+
+    .encounterSlot {
+        grid-template-columns: 48px 68px auto 56px;
+        grid-template-rows: auto;
+        grid-column-gap: 0px;
+        padding: 12px 12px;
+    }
+
+    .encounterSlot > img {
+        grid-row: span 2;
+        left: -12px;
+    }
+
+    .encounterSlot p#percent {
+        grid-row: span 2;
+    }
+
+    .encounterSlot #species {
+        padding-left: 0;
+    }
+        
+    .encounterSlot p#minLevel,.encounterSlot p#maxLevel {
+        grid-row: 2;
+    }
+    
+    .encounterSlot p#minLevel,.encounterSlot p#maxLevel {
+        grid-row: 2;
+    }
+    
+    .encounterSlot p#minLevel {
+        grid-column: 3;
+    }
+    
+    .encounterSlot p#maxLevel {
+        grid-column: 4;
+    }
+}
+
 
 select, input{
     border: 2px solid rgb(202, 202, 202);
