--- a/style.css
+++ b/style.css
@@ -13,10 +13,21 @@ body {
   margin: auto;
 }
 
+.section {
+  height:100%;
+  padding: 12px 4px;
+  background-color: white;
+  border-radius: 24px;
+}
+
 @media only screen and (min-width: 768px) {
 	#siteContainer {
 	  width: 70%;
   margin: auto;
+  }
+
+  .section {
+    padding: 12px 24px;
   }
 }
 
@@ -46,12 +57,7 @@ h1, h2, h3 {
   font-family: 'mencobold';
 }
 
-.section {
-  height:100%;
-  padding: 12px 24px;
-  background-color: white;
-  border-radius: 24px;
-}
+
 
 img {
   max-width: 100%;
